base/media/tunarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunarr
  namespace: media
  labels:
    app.kubernetes.io/name: tunarr
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tunarr
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
